--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+src/css/
+
 # Created by https://www.gitignore.io/api/inte,intellij,visualstudio,visualstudiocode,jetbrains,sublimetext,sass,dart,node
 
 #!! ERROR: inte is undefined. Use list command to see defined gitignore types !!#
@@ -149,7 +151,7 @@ build/
 
 
 # Files created by dart2js
-# (Most Dart developers will use pub build to compile Dart, use/modify these 
+# (Most Dart developers will use pub build to compile Dart, use/modify these
 #  rules if you intend to use dart2js directly
 #  Convention is to use extension '.dart.js' for Dart compiled to Javascript to
 #  differentiate from explicit Javascript files)
@@ -162,7 +164,7 @@ build/
 # Directory created by dartdoc
 doc/api/
 
-# Don't commit pubspec lock file 
+# Don't commit pubspec lock file
 # (Library packages only! Remove pattern if developing an application package)
 pubspec.lock
 
