Move data to the repository, add dartfmt to travis

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,10 @@ environment:
 
 dependencies:
   intl: '^0.15.2'
-  firebase: '^4.1.0'
 
 dev_dependencies:
-  browser: '>=0.10.0 <0.11.0'
-  dart_to_js_script_rewriter: '^1.0.1'
+  browser: '^0.10.0+2'
+  dart_to_js_script_rewriter: '^1.0.3'
 
 transformers:
 - dart_to_js_script_rewriter
