--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ author: Honza Bittner
 homepage: http://honzabittner.cz
 
 environment:
-  sdk: '>=2.0.0-dev.46.0 <2.0.0'
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  intl: '^0.15.2'
-  meta: '^1.1.2'
+  intl: '^0.15.7'
+  meta: '^1.1.7'
 
 dev_dependencies:
-  build_runner: '^0.8.7'
-  build_web_compilers: '^0.3.7+3'
+  build_runner: '^1.2.5'
+  build_web_compilers: '^1.1.0'
