--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  intl: '^0.15.7'
-  meta: '^1.1.7'
+  intl: ^0.16.1
+  meta: ^1.2.4
 
 dev_dependencies:
-  build_runner: '^1.2.5'
-  build_web_compilers: '^1.1.0'
+  build_runner: ^1.10.13
+  build_web_compilers: ^2.12.0
