--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
-name: fckng_portfolio
-version: 0.0.1
-description: Fckng portfolio.
-author: Honza Bittner
-homepage: http://honzabittner.cz
+name: portfolio
+description: An absolute bare-bones web app.
+version: 2021.1.0
+homepage: https://tenhobi.dev
+publish_to: none
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: '>=2.14.4 <3.0.0'
 
 dependencies:
-  intl: ^0.16.1
-  meta: ^1.2.4
+  intl: ^0.17.0
 
 dev_dependencies:
-  build_runner: ^1.10.13
-  build_web_compilers: ^2.12.0
+  build_runner: ^1.10.0
+  build_web_compilers: ^2.11.0
+  lints: ^1.0.0
